# tarq

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmar_talib.py  heaptrack.cargo.162093.zst  heaptrack.cargo.162452.zst  heaptrack.cargo.162905.zst  heaptrack.cargo.163065.zst  heaptrack.cargo.163826.zst  indicator_tamplate.rs  perf.data  perf.data.old  pyproject.toml  tarq.pyi
.github/workflows/: CI-yml  CI-zig.yml  CI.yml  build.yml
benches/: benchmark.rs
python_tests/: tarq_bench.py
src/: circular_buffer.rs  enums.rs  lib.rs  python_api.rs
src/indicators/: atr.rs  bbands.rs  bbpb.rs  dema.rs  ema.rs  kama.rs  mod.rs  sma.rs  stddev.rs  tema.rs  vwma.rs  wma.rs
