[package]
name = "tarq"
version = "0.1.2"
edition = "2021"

[dev-dependencies]
criterion = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]  # "cdylib" is needed for PyO3


[package.metadata.maturin]
name = "tarq"
include = ["tarq.pyi"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rand = "0.9.0"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
numpy = "0.24"






